<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <CheckBox 
        android:id="@+id/chebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:clickable="false"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/patient_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/pno"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_no"
        android:singleLine="true"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/no"
        android:text="@string/patientName"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_name"
        android:singleLine="true"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/patient_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/name"
        android:singleLine="true"
        android:text="@string/sex"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_sex"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/patient_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/sex"
        android:text="@string/age"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_age"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/patient_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/telphone"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_tel"
        android:singleLine="true"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/patient_adr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_tel"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/adr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_tel"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_adr"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/patient_IDnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_adr"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/IDnum"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/IDnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_adr"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/patient_IDnum"
        android:text=""
        android:textColor="#444"
        android:textSize="16sp" />

</RelativeLayout>